# solar-permit-intelligence

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SESSION_START.md  pyproject.toml
docs/: architecture.md  failure_log.md  field_roadmap.md  field_schema.md  project_scope.md  rules_v1.md
notebooks/: README.md
src/: __init__.py  config.py  schemas.py
src/classification/: __init__.py
src/evaluation/: __init__.py  evaluate_extraction.py  regression_check.py
src/extraction/: __init__.py  extract_candidates.py
src/ingestion/: __init__.py  ingest_pdf.py
src/rules/: __init__.py
src/utils/: __init__.py  inspect_processed.py
src/validation/: run_validation.py  validate_fields.py
