[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-permit-intelligence"
version = "0.1.0"
description = "Document intelligence MVP for solar permit materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
